# libdisplay-info

./: .editorconfig  .gitlab-ci.yml  README.md  cta.c  di-edid-decode.c  displayid.c  dmt-table.c  edid.c  gtf.c  info.c  libdisplay-info.map  log.c  memory-stream.c  meson.build
di-edid-decode/: cta.c  displayid.c  edid.c  main.c
include/: bits.h  cta.h  displayid.h  dmt.h  edid.h  info.h  memory-stream.h
include/libdisplay-info/: cta.h  displayid.h  edid.h  info.h
test/: di-edid-print.c  edid-decode-check.sh  edid-decode-diff.sh  edid-print-check.sh  meson.build
test/data/: README.md  acer-p1276.diff  acer-p1276.edid  acer-p1276.print  apple-xdr-dp.diff  apple-xdr-dp.print  custom-uncommon-cta-vesa.diff  custom-uncommon-cta-vesa.edid  custom-uncommon-cta-vesa.print  dell-2408wfp-dp.diff  dell-2408wfp-dp.print  goldstar-ite6604-hdmi.diff  goldstar-ite6604-hdmi.edid  goldstar-ite6604-hdmi.print  hp-5dq99aa-hdmi.diff  hp-5dq99aa-hdmi.edid  hp-5dq99aa-hdmi.print  msi-mag321curv-dp.diff  msi-mag321curv-dp.edid  msi-mag321curv-dp.print  panasonic-mei96a2-dp.diff  panasonic-mei96a2-dp.print  samsung-s27a950d-dp  samsung-s27a950d-dp.diff  samsung-s27a950d-dp.print  sun-gh19ps-dvi.diff  sun-gh19ps-dvi.edid  sun-gh19ps-dvi.print  viewsonic-vp2768-dp.diff  viewsonic-vp2768-dp.edid  viewsonic-vp2768-dp.print
tool/: gen-dmt.py  gen-search-table.py
